src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__cron_lifecycle_2_add.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 542
expression: normalized
---
{
  "error": {
    "code": "INVALID_REQUEST",
    "message": "schedule.kind is required",
    "retryable": false
  },
  "ok": false
}
