src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__cron_lifecycle_3_list_with_job.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 548
expression: normalized
---
{
  "ok": true,
  "result": {
    "jobs": []
  }
}
