src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_channels_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 378
expression: normalized
---
{
  "ok": true,
  "result": {
    "channels": [],
    "connected": 0,
    "total": 0,
    "ts": "<TIMESTAMP>"
  }
}
