src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_config_get_key.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 346
expression: normalized
---
{
  "ok": true,
  "result": {
    "key": "gateway.port",
    "value": 18789
  }
}
