src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_config_schema.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 703
expression: normalized
---
{
  "ok": true,
  "result": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "properties": {
      "agent": {
        "type": "object"
      },
      "channels": {
        "type": "object"
      },
      "gateway": {
        "type": "object"
      }
    },
    "type": "object"
  }
}
