src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_cron_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 388
expression: normalized
---
{
  "ok": true,
  "result": {
    "enabled": true,
    "jobs": 0,
    "nextRunAtMs": null,
    "storePath": ":memory:"
  }
}
